--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,17 @@
       <groupId>com.thinkaurelius.titan</groupId>
       <artifactId>titan-all</artifactId>
       <version>${titan.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.0.13</version>
     </dependency>
   </dependencies>
 
